--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="en"></html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -225,6 +226,7 @@
       </div>
     </div>
   </div>
+ 
 
   <footer>
     <div>
@@ -254,7 +256,6 @@
 
 
 
-<script src="productPage_2.js"></script>
-<script src="mailingList.js"></script>      
+<script src="productPage_2.js"></script>   
 </body>
 </html>
