--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
 
 
 
-<script src="productPage_2.js"></script>   
+<script src="productPage_2.js"></script>
+<script src="mailingList.js"></script>   
 </body>
 </html>
